sample text and faiss file created

--- a/Rocky_GenAI_Langchain.ipynb
+++ b/Rocky_GenAI_Langchain.ipynb
@@ -617,10 +617,54 @@
     "    print(\"\\n\")"
    ]
   },
+   "execution_count": 32,
+   "id": "a904d766-f6e0-4cab-abdf-048f827c018e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "47b96ed0-8cac-44a2-9eaf-a8f28fa53ba6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/GenAIRocky/bin/python\n"
+     ]
+    }
+   ],
+   "source": [
+    "!which python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "ea52edb7-9507-4e22-892c-75d76f4dc732",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zsh:1: command not found: conda\n"
+     ]
+    }
+   ],
+   "source": [
+    "!conda env --info"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7e7b9e8-2a1a-4c72-b73e-a20474892c34",
+   "id": "664130a2-3585-4404-b6eb-b40587f9e64d",
    "metadata": {},
    "outputs": [],
    "source": []
