added faiss, retrieval files

--- a/Faiss.ipynb
+++ b/Faiss.ipynb
@@ -434,29 +434,306 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "6bba5f1e-8d32-4a8f-9610-0e742669343b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index = faiss.IndexFlatL2(dim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "695b9dc4-0dc9-4270-8d54-2b89c9375991",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index.add(vectors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "5599a290-b840-4986-b27c-1e356c0a37d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search_query = \"Apple a day keeps the doctor away\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "a788422c-9051-4807-b70a-590e4f190e9b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<faiss.swigfaiss.IndexFlatL2; proxy of <Swig Object of type 'faiss::IndexFlatL2 *' at 0x17600d6e0> >"
+       "(768,)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "faiss.IndexFlatL2()"
+    "vec = encoder.encode(search_query)\n",
+    "vec.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "d9d9559e-bf2e-41ef-9d40-ac30379adb0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 768)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "svec = np.array(vec).reshape(1, -1)\n",
+    "svec.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "7e4cff59-8d9d-4496-b4b9-b2cc4ceb3998",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distances, I = index.search(svec, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "38b9002a-1e4e-47bd-be08-4a3c75a6c103",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Meditation and yoga can improve mental health</td>\n",
+       "      <td>Health</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Fruits, whole grains and vegetables helps control blood pressure</td>\n",
+       "      <td>Health</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>These are the latest fashion trends for this week</td>\n",
+       "      <td>Fashion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Vibrant color jeans for male are becoming a trend</td>\n",
+       "      <td>Fashion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The concert starts at 7 PM tonight</td>\n",
+       "      <td>Event</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Navaratri dandiya program at Expo center in Mumbai this october</td>\n",
+       "      <td>Event</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Exciting vacation destinations for your next trip</td>\n",
+       "      <td>Travel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Maldives and Srilanka are gaining popularity in terms of low budget vacation places</td>\n",
+       "      <td>Travel</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                  text  \\\n",
+       "0                                        Meditation and yoga can improve mental health   \n",
+       "1                     Fruits, whole grains and vegetables helps control blood pressure   \n",
+       "2                                    These are the latest fashion trends for this week   \n",
+       "3                                    Vibrant color jeans for male are becoming a trend   \n",
+       "4                                                   The concert starts at 7 PM tonight   \n",
+       "5                      Navaratri dandiya program at Expo center in Mumbai this october   \n",
+       "6                                    Exciting vacation destinations for your next trip   \n",
+       "7  Maldives and Srilanka are gaining popularity in terms of low budget vacation places   \n",
+       "\n",
+       "  category  \n",
+       "0   Health  \n",
+       "1   Health  \n",
+       "2  Fashion  \n",
+       "3  Fashion  \n",
+       "4    Event  \n",
+       "5    Event  \n",
+       "6   Travel  \n",
+       "7   Travel  "
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "ce1ec844-7cc2-4846-8444-fb3004cd5f47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0]])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "I"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "ec81cd2e-b52f-4d67-bd9a-be2a6b4ba8b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Fruits, whole grains and vegetables helps control blood pressure</td>\n",
+       "      <td>Health</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Meditation and yoga can improve mental health</td>\n",
+       "      <td>Health</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                               text category\n",
+       "1  Fruits, whole grains and vegetables helps control blood pressure   Health\n",
+       "0                     Meditation and yoga can improve mental health   Health"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[I[0]]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "695b9dc4-0dc9-4270-8d54-2b89c9375991",
+   "id": "680c2876-4ce7-462e-b069-540a3ffd014e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0d04196-6a89-424e-831b-536a230b50fd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8351a1f1-8f0a-49af-89ef-545ec9cd719d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e09770d-e27f-4cf9-ad0b-06e61744eb09",
    "metadata": {},
    "outputs": [],
    "source": []
